# Project2_Denisov_m25_555

./: .gitignore  Makefile  README.md  db_meta.json  demo.cast  pyproject.toml
data/: employees.json  products.json
src/: decorators.py
src/primitive_db/: constants.py  core.py  engine.py  main.py  parser.py  utils.py
