[project]
name = "project2-denisov-m25555"
version = "1.1.0"
description = ""
authors = [
    {name = "Sergey",email = "sergey1999den@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)",
    "prettytable (>=3.16.0,<4.0.0)"
]
[tool.poetry]
 packages = [
     { include = "src" },
 ]
 


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff (>=0.14.2,<0.15.0)",
    "isort (>=7.0.0,<8.0.0)"
]
